# matrix-nimble-web

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json  remove_comments.py
examples/: data_provider.rs
examples/light_server/: main.rs  web.config.json
examples/photos/: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  prelude.rs
src/app/: application.rs  builder.rs  mod.rs
src/background/: hosted_service.rs  in_memory_queue.rs  job.rs  job_queue.rs  mod.rs  runner.rs
src/cli/: README.md  mod.rs
src/config/: builder.rs  config.rs  env.rs  mod.rs  postgres.rs  redis.rs  source.rs
src/controller/: attribute_route.rs  controller.rs  invoker.rs  mod.rs  registry.rs  route.rs
src/crud/: add_entity.rs  handlers.rs  mod.rs  query.rs  repository.rs  routes.rs
src/data/: memory_repository.rs  mod.rs  paging.rs  provider.rs  query.rs  query_builder.rs  repository.rs  schema.rs
src/di/: container.rs  data.rs  lifetime.rs  mod.rs  provider.rs  registration.rs  service_scope.rs
src/endpoint/: endpoint.rs  http_endpoint.rs  http_endpoint_handler.rs  http_handler.rs  kind.rs  metadata.rs  mod.rs  registry.rs  route.rs  websocket_endpoint.rs  websocket_endpoint_handler.rs  ws_endpoint.rs  ws_endpoint_handler.rs  ws_handler.rs
src/entity/: entity.rs  hooks.rs  metadata.rs  mod.rs  operation.rs  registry.rs
src/filters/: endpoint_filter.rs  filter_chain.rs  mod.rs
src/http/: body.rs  context.rs  headers.rs  mod.rs  request.rs  request_body.rs  response.rs  response_body.rs
src/identity/: claims.rs  context.rs  identity.rs  kind.rs  method.rs  mod.rs  user.rs
src/middleware/: cors.rs  endpoint_exec.rs  error.rs  logging.rs  mod.rs  routing.rs  validation.rs
src/openapi/: generator.rs  handler.rs  mod.rs  model.rs  registry.rs  schema.rs
src/pipeline/: middleware.rs  mod.rs  next.rs  pipeline.rs
src/redis/: mod.rs  redis_cache.rs  redis_client.rs  redis_lock.rs  redis_module.rs
src/result/: error.rs  file.rs  into_response.rs  json.rs  mod.rs  text.rs
src/routing/: default_router.rs  mod.rs  route.rs  route_data.rs  router.rs  simple_router.rs
src/runtime/: hyper_runtime.rs  mod.rs  runtime.rs
src/security/: auth.rs  mod.rs  policy.rs  rate_limit.rs  token.rs
src/testbot/: assert.rs  bot.rs  combo.rs  context.rs  error.rs  http.rs  mod.rs  scenario.rs  step.rs
src/testkit/: app.rs  auth.rs  background.rs  context.rs  entity.rs  mod.rs  request.rs  response.rs  router.rs  services.rs
src/validation/: error.rs  middleware.rs  mod.rs  validator.rs
src/websocket/: connection.rs  mod.rs  upgrade.rs
templates/cli/: Cargo.toml.template  Dockerfile.deploy.template  Dockerfile.dev.template  gitignore.template  main.rs.template
test-generation/: Cargo.toml  Dockerfile
test-generation/src/: main.rs
test-pg-gen/: Cargo.toml  Dockerfile
test-pg-gen/src/: main.rs
tests/: app_builder_tests.rs  application_tests.rs  background_tests.rs  config_file_edge_tests.rs  config_tests.rs  controller_invoker_tests.rs  controller_tests.rs  crud_tests.rs  data_provider_tests.rs  di_container_tests.rs  di_tests.rs  endpoint_metadata_tests.rs  endpoint_tests.rs  entity_tests.rs  http_body_tests.rs  http_tests.rs  identity_tests.rs  memory_repository_tests.rs  middleware_validation_tests.rs  mongo_provider_tests.rs  openapi_tests.rs  paging_tests.rs  pipeline_tests.rs  policy_tests.rs  postgres_config_tests.rs  postgres_migration_tests.rs  postgres_provider_tests.rs  provider_tests.rs  query_builder_tests.rs  query_tests.rs  redis_cache_unit_tests.rs  redis_client_unit_tests.rs  redis_config_tests.rs  redis_integration.rs  redis_lock_unit_tests.rs  redis_module_tests.rs  repository_tests.rs  result_tests.rs  route_attribute_tests.rs  routing_tests.rs  (+8 more)
(+48 files in other folders)
