[package]
name = "nimble-web"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "nimble"
path = "src/bin/nimble.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1"
toml = "0.8"
futures-util = "0.3"
async-trait = "0.1"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"

[dependencies.redis]
version = "1.0"
optional = true

[dependencies.deadpool-redis]
version = "0.22"
optional = true

[dependencies.deadpool]
version = "0.12"
optional = true

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "postgres", "chrono"]
optional = true

[dependencies.mongodb]
version = "3.5.0"
optional = true

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[dependencies.dialoguer]
version = "0.11"
optional = true

[dependencies.fs_extra]
version = "1.3"
optional = true

[features]
redis = ["dep:redis", "dep:deadpool-redis", "dep:deadpool"]
mongodb = ["dep:mongodb"]
postgres = ["dep:sqlx"]
cli = ["dep:clap", "dep:dialoguer", "dep:fs_extra"]

[dev-dependencies]
reqwest = "0.13.1"
libc = "0.2"
