[package]
name = "pg-app"
version = "0.1.0"
edition = "2021"

[dependencies]
nimble-web = { git = "https://github.com/AndrewLang/matrix-nimble-web.git", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
